# sampler-sweeper

./: .gitignore  README.md  analyze_chat_results.py  analyze_results.py  eval_all_prompts.py  optuna_parameter_sweep.py  pyproject.toml  requirements.txt  slop_guard.py  slop_patterns.yaml  sweep_config.example.yaml  sweep_config.yaml  verify_calibration.py
